[package]
name = "os-config"
version = "1.2.12"
authors = ["Zahari Petkov <zahari@balena.io>", "Andrei Gherzan <andrei@balena.io>"]
description = "balenaOS configuration tool"
repository = "https://github.com/balena-os/os-config"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
reqwest = "0.9"
dbus = "0.6"
openssl = "0.10"
hex = "0.3"
getrandom = "0.1"
base64 = "0.10"

[dependencies.clap]
version = "3"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0"
maplit = "1.0"
tempdir = "0.3"
unindent = "0.1"
actix-net = "0.2"
futures = "0.1"
predicates = "3.0"

[dev-dependencies.actix-web]
version = "0.7"
features = ["ssl"]

[dependencies.fatrw]
git = "https://github.com/balena-os/fatrw"
rev = "04629a208b9035d642e51db54886f3d39d7ee029"

[profile.release]
opt-level = "z"
codegen-units = 1
