[package]
name = "os-config"
version = "1.2.18"
authors = ["Zahari Petkov <zahari@balena.io>", "Andrei Gherzan <andrei@balena.io>"]
description = "balenaOS configuration tool"
repository = "https://github.com/balena-os/os-config"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
reqwest = {version = "0.11", features = ["blocking"]}
openssl = "0.10"
hex = "0.3"
getrandom = "0.1"
base64 = "0.10"
zbus = {version = "3.13", default-features = false, features = ["tokio"]}

[dependencies.clap]
version = "3"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0"
maplit = "1.0"
tempdir = "0.3"
unindent = "0.1"
predicates = "3.0"

[dev-dependencies.actix-web]
version = "4.3"
features = ["openssl"]

[dependencies.fatrw]
git = "https://github.com/balena-os/fatrw"
rev = "228b66078678317ea28802369719b235cd10d56f"

[profile.release]
opt-level = "z"
codegen-units = 1
