[workspace]
members = ["test_utils"]

[package]
name = "os-config"
version = "1.3.0"
authors = ["Zahari Petkov <zahari@balena.io>", "Andrei Gherzan <andrei@balena.io>"]
description = "balenaOS configuration tool"
repository = "https://github.com/balena-os/os-config"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.10"
serde = "1"
serde_derive = "1"
serde_json = "1"
reqwest = {version = "0.11", default-features = false, features = ["blocking", "rustls-tls"]}
hex = "0.4"
getrandom = "0.2"
base64 = "0.21"
zbus = {version = "3.12", default-features = false, features = ["tokio"]}
clap = {version = "4.1", features = ["derive", "cargo"]}

[dev-dependencies]
assert_cmd = "2.0.11"
maplit = "1.0"
tempfile = "3"
unindent = "0.1"
ntest = "0.9"
test_utils = {path = "test_utils"}

[dependencies.fatrw]
git = "https://github.com/balena-os/fatrw"
rev = "4920c2d3146cd5745660170e55ae2a26c7d35ca5" # v0.2.23

[profile.release]
opt-level = "z"
codegen-units = 1
